<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/loginscrn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:text="@string/registration"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fstTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/full_name" />

    <EditText
        android:id="@+id/edtFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:ems="10" />

    <TextView
        android:id="@+id/secTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="Email" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:ems="10" />

    <TextView
        android:id="@+id/thirdTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/metricHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Choose either the Imperial or Metric system"
        />
    <RadioGroup
        android:id="@+id/rgUnits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:layout_gravity="center"
        android:checkedButton="@+id/sound">

        <RadioButton
            android:id="@+id/Miles"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:text="@string/Miles" />

        <RadioButton
            android:id="@+id/Kms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Kms" />

    </RadioGroup>
    <TextView
        android:id="@+id/spinnerhint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/choose_a_preferred_landmark_type"
        />
    <Spinner
        android:id="@+id/spnLandmark"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:entries="@array/landmark_types"
        />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register" />

    <TextView
        android:id="@+id/lnkLogin"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/already_registered_login_here"
        android:textColor="#3F51B5"
        android:textSize="20sp" />

</LinearLayout>
